Tabs no longer jump back
Fixed a bug introduced in the last commit where tabs would always jump to
the first spot after the pinned tabs. Also added comments to the code of
last commit and slighty changed the CSS for the packages (also added
comments refering to the file-icon packages in every related file).

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -89,6 +89,3 @@
 .light-pink when (@colored-icons) { color: @lpk; }
 .medium-pink when (@colored-icons) { color: @mpk; }
 .dark-pink when (@colored-icons) { color: @dpk; }
-
-
-.default-color { color: #FFF; }
