--- a/styles/fonts.less
+++ b/styles/fonts.less
@@ -1,3 +1,9 @@
+/*============================================================================*
+  From file-icons, by Dan Brooker
+  https://atom.io/packages/file-icons
+/*============================================================================*/
+
+
 @font-face {
   font-family: 'FontAwesome';
   font-weight: normal;
